# Forex-Dashboard-and-AI-chat-with-tools-Streamlit-App

./: Dockerfile  LICENSE  README.md  app.py  debug_yf.py  pyproject.toml  test_agent.py
utils/: data_loader.py  llm_agent.py  promp.txt
